legal practice section complete

--- a/index.html
+++ b/index.html
@@ -34,62 +34,140 @@
     <link
         href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@800&family=Manrope:wght@500&family=Poppins:wght@400;500;700&family=Work+Sans:ital,wght@0,400;0,600;0,700;1,400&display=swap"
         rel="stylesheet">
+    <!-- style css -->
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body class="container px-52">
-<!-- header section -->
-<header class="mt-16">
-    <!-- navigation-bar -->
-    <nav class="flex items-center">
-        <img class="h-12 w-auto" src="images/logo2.png" alt="">
-        <ul class="flex ms-auto text-para space-x-7">
-            <li>Home</li>
-            <li>Services</li>
-            <li>Cases</li>
-            <li>Blog</li>
-            <li>Contact Us</li>
-        </ul>
-        <button class="ms-auto text-2xl font-semibold text-white bg-[#B68C5A] py-4 px-7 rounded-lg">
-            Free Consultation
-        </button>
-    </nav>
-    <!-- end of navigation-bar -->
-    <!-- banner-section -->
-    <section class="mt-14 ">
-        <img class="absolute" src="images/banner.png" alt="">
-        <div class="relative py-24 px-56 text-center space-y-7">
-            <h1 class="text-white text-7xl 
+    <!-- header section -->
+    <header class="mt-16">
+        <!-- navigation-bar -->
+        <nav class="flex items-center">
+            <img class="h-12 w-auto" src="images/logo2.png" alt="">
+            <ul class="flex ms-auto text-para space-x-7">
+                <li>Home</li>
+                <li>Services</li>
+                <li>Cases</li>
+                <li>Blog</li>
+                <li>Contact Us</li>
+            </ul>
+            <button class="ms-auto text-2xl font-semibold text-white bg-[#B68C5A] py-4 px-7 rounded-lg">
+                Free Consultation
+            </button>
+        </nav>
+        <!-- end of navigation-bar -->
+        <!-- banner-section -->
+        <section class="mt-14 ">
+            <img class="absolute" src="images/banner.png" alt="">
+            <div class="relative py-24 px-56 text-center space-y-7">
+                <h1 class="text-white text-7xl 
             " style="font-family:font-EB Garamond;">We Provide Effective <br> Legal Solutions</h1>
-            <p class="text-[#E7E7E7]">
-                There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                alteration in some form, by injected humour.
-            </p>
-            <div class="space-x-6">
-                <input type="text" placeholder="Search your services" class="rounded-lg  ps-5 pe-72 h-14">
-                <button class="bg-[#B68C5A] rounded-lg py-4 px-9 text-white font-semibold">Search</button>
+                <p class="text-[#E7E7E7]">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour.
+                </p>
+                <div class="space-x-6">
+                    <input type="text" placeholder="Search your services" class="rounded-lg  ps-5 pe-72 h-14">
+                    <button class="bg-[#B68C5A] rounded-lg py-4 px-9 text-white font-semibold">Search</button>
+                </div>
             </div>
-        </div>
-    </section>
-    <!-- banner-section end -->
-</header>
-<main class="mt-32">
-    <!-- The Legal Practice Area-section -->
-    <section>
-        <div class="text-center">
-            <h1 class="font-EB head text-4xl text-[#414040]">The Legal Practice Area</h1>
-            <p class="text-para">
-                There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                alteration in some form, by injected humour.
-            </p>
-        </div>
-    </section>
-    <!-- The Legal Practice Area-section end-->
+        </section>
+        <!-- banner-section end -->
+    </header>
+    <main class="mt-32">
+        <!-- The Legal Practice Area-section -->
+        <section>
+            <div class="text-center space-y-6">
+                <h1 class="font-EB head text-4xl text-[#414040]">The Legal Practice Area</h1>
+                <p class="text-para">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour.
+                </p>
+            </div>
+            <div class="grid grid-cols-3 grid-rows-2 text-center pt-16">
+                <div
+                    class="flex flex-col justify-center items-center space-y-8 border-r-2 border-b-2 border-gray-100 px-16 py-14">
+                    <img src="images/business.png" alt="">
+                    <h3 class="head text-head font-3xl">Business Law</h3>
+                    <p>
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour.
+                    </p>
+                    <img src="images/Frame.png" alt="">
+                </div>
+                <div
+                    class="flex flex-col justify-center items-center space-y-8 border-r-2 border-b-2 border-gray-100 px-16 py-14 bg-gradient-to-b from-[#F3F3F3] to-[#ffff]">
+                    <img src="images/business.png" alt="">
+                    <h3 class="head text-head font-3xl">Business Law</h3>
+                    <p>
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour.
+                    </p>
+                    <img src="images/Frame.png" alt="">
+                </div>
+                <div
+                    class="flex flex-col justify-center items-center space-y-8 border-l-2 border-b-2 border-gray-100 px-16 py-14">
+                    <img src="images/business.png" alt="">
+                    <h3 class="head text-head font-3xl">Business Law</h3>
+                    <p>
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour.
+                    </p>
+                    <img src="images/Frame.png" alt="">
+                </div>
 
-</main>
+                <div
+                    class="flex flex-col justify-center items-center space-y-8 border-r-2 border-t-2 border-gray-100 px-16 py-14">
+                    <img src="images/business.png" alt="">
+                    <h3 class="head text-head font-3xl">Business Law</h3>
+                    <p>
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour.
+                    </p>
+                    <img src="images/Frame.png" alt="">
+                </div>
+                <div
+                    class="flex flex-col justify-center items-center space-y-8 border-r-2 border-t-2 border-gray-100 px-16 py-14 ">
+                    <img src="images/business.png" alt="">
+                    <h3 class="head text-head font-3xl">Business Law</h3>
+                    <p>
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour.
+                    </p>
+                    <img src="images/Frame.png" alt="">
+                </div>
+                <div
+                    class="flex flex-col justify-center items-center space-y-8 border-l-2 border-t  -2 border-gray-100 px-16 py-14">
+                    <img src="images/business.png" alt="">
+                    <h3 class="head text-head font-3xl">Business Law</h3>
+                    <p>
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour.
+                    </p>
+                    <img src="images/Frame.png" alt="">
+                </div>
+
+            </div>
+        </section>
+        <!-- The Legal Practice Area-section end-->
+        <!-- What Our Client Say section -->
+        <section class="mt-28">
+            <div class="text-center space-y-6">
+                <h1 class="head text-head text-4xl">What Our Client Say</h1>
+                <p class="text-para">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.
+                </p>
+            </div>
+            <div>
+                
+            </div>
+        </section>
+        <!-- What Our Client Say section end -->
+    </main>
 
 
-<footer>
-    <h1>hello</h1>
-</footer>
+    <footer>
+    </footer>
 
 
 
