--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="container px-52">
+<body class="container">
     <!-- header section -->
-    <header class="mt-16">
+    <header class="mt-16  px-44">
         <!-- navigation-bar -->
         <nav class="flex items-center">
             <img class="h-12 w-auto" src="images/logo2.png" alt="">
@@ -74,7 +74,7 @@
         </section>
         <!-- banner-section end -->
     </header>
-    <main class="mt-32">
+    <main class="mt-32  px-44">
         <!-- The Legal Practice Area-section -->
         <section>
             <div class="text-center space-y-6">
@@ -155,18 +155,150 @@
             <div class="text-center space-y-6">
                 <h1 class="head text-head text-4xl">What Our Client Say</h1>
                 <p class="text-para">
-                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour.
                 </p>
             </div>
             <div>
-                
+
             </div>
         </section>
         <!-- What Our Client Say section end -->
+        <!-- Frequently Asked Any Questions section -->
+        <section>
+
+        </section>
+        <!-- Frequently Asked Any Questions section end -->
+        <!-- Contact With Us section -->
+        <section class="mt-28">
+            <div class="text-center mb-16 space-y-5">
+                <h1 class="head text-head text-4xl">Contact With Us</h1>
+                <p class="text-para">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour.
+                </p>
+            </div>
+            <div class="grid grid-cols-2 gap-7">
+                <div class="grid grid-cols-2 grid-rows-2">
+                    <div
+                        class="space-y-4 px-14 py-16 flex flex-col items-center justify-center border-r-2 border-b-2 border-[#CFCFCF] bg-[#F3F3F3]">
+                        <img class="" src="images/location.png" alt="">
+                        <h4 class="head text-head text-2xl">Address</h4>
+                        <p>
+                            A108 Adam Street,
+                            New York, NY 535022
+                        </p>
+                    </div>
+                    <div
+                        class="space-y-4 px-14 py-16 flex flex-col items-center justify-center border-l-2 border-b-2 border-[#CFCFCF] bg-[#F3F3F3]">
+                        <img class="" src="images/location.png" alt="">
+                        <h4 class="head text-head text-2xl">Address</h4>
+                        <p>
+                            A108 Adam Street,
+                            New York, NY 535022
+                        </p>
+                    </div>
+                    <div
+                        class="space-y-4 px-14 py-16 flex flex-col items-center justify-center border-r-2 border-t-2 border-[#CFCFCF] bg-[#F3F3F3]">
+                        <img class="" src="images/location.png" alt="">
+                        <h4 class="head text-head text-2xl">Address</h4>
+                        <p>
+                            A108 Adam Street,
+                            New York, NY 535022
+                        </p>
+                    </div>
+                    <div
+                        class="space-y-4 px-14 py-16 flex flex-col items-center justify-center border-l-2 border-t-2 border-[#CFCFCF] bg-[#F3F3F3]">
+                        <img class="" src="images/location.png" alt="">
+                        <h4 class="head text-head text-2xl">Address</h4>
+                        <p>
+                            A108 Adam Street,
+                            New York, NY 535022
+                        </p>
+                    </div>
+                </div>
+                <div class="space-y-8">
+                    <form action="" class="space-y-7">
+                        <input type="text" placeholder="Search your services"
+                            class="rounded-lg  ps-5 pe-72 h-14 bg-[#F3F3F3]">
+                        <input type="text" placeholder="Search your services"
+                            class="rounded-lg  ps-5 pe-72 h-14 bg-[#F3F3F3]">
+                        <input type="text" placeholder="Search your services"
+                            class="rounded-lg  ps-5 pe-72 h-14 bg-[#F3F3F3]">
+                        <textarea placeholder="Your Message" name="" id="" cols="62" rows="10"
+                            class="ps-4 pt-4 bg-[#F3F3F3] h-auto"></textarea>
+                    </form>
+                    <div class="pe-20">
+                        <button class="w-full h-16 bg-button rounded-lg text-white font-semibold ">Send Message</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Contact With Us section end -->
     </main>
+    <footer class="mt-28 bg-black  px-44">
+        <div class="grid grid-cols-4 py-32 text-para gap-16 ">
+            <div class="space-y-8">
+                <img src="images/logo2.png" alt="">
+                <p class="text-para">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour.
+                </p>
 
+            </div>
+            <div class="space-y-8 flex flex-col items-center">
+                <h4 class="head text-white font-3xl">Usefull Link</h4>
+                <ul class="text-para space-y-3">
+                    <li>Home</li>
+                    <li>About Us</li>
+                    <li>Cases</li>
+                    <li>Blog</li>
+                    <li>Contact Us</li>
+                </ul>
+            </div>
+            <div class="space-y-8">
+                <h4 class="text-white head font-3xl">Contact Now</h4>
+                <div class="space-y-4">
+                    <p class="text-para">
+                        555 4th 5t NW, Washington
+                        DC 20530, United States
+                    </p>
+                    <p class="text-para">
+                        +88 01750 000 000 <br>
+                        +88 01750 000 000
+                    </p>
+                    <p class="text-para">
+                        info@gmail.com <br>
+                        info@gmail.com
+                    </p>
+                </div>
+            </div>
+            <div class="space-y-8">
+                <h4 class="head text-white font-3xl">Subscribe</h4>
+                <div class="space-y-4">
+                    <p>
+                        Subscribe for our latest & Articles. We Won’t Give You Spam Mails
+                    </p>
+                    <div>
+                        <input type="text" placeholder="Email Address"
+                            class="bg-[#F3F3F3] py-5 ps-8 ms-auto rounded-lg">
 
-    <footer>
+                        <div
+                            class="bg-[#B68C5A] inline-block py-5 px-5 rounded-lg text-white font-semibold absolute left-auto right-48 ">
+                            <div class=" -rotate-45">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                    stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                        d="M6 12L3.269 3.126A59.768 59.768 0 0121.485 12 59.77 59.77 0 013.27 20.876L5.999 12zm0 0h7.5" />
+                                </svg>
+                            </div>
+
+                        </div>
+                </div>
+            </div>
+        </div>
+        </div>
+
     </footer>
 
 
