--- a/index.html
+++ b/index.html
@@ -44,12 +44,60 @@
         <!-- navigation-bar -->
         <nav class="flex items-center">
             <img class="h-12 w-auto" src="images/logo2.png" alt="">
-            <ul class="flex ms-auto text-para space-x-7">
-                <li>Home</li>
-                <li>Services</li>
-                <li>Cases</li>
-                <li>Blog</li>
-                <li>Contact Us</li>
+            <ul class="flex ms-auto text-para space-x-4">
+                <li class="flex items-center justify-center">
+                    <span>Home</span>
+                    <div class="inline">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="w-6 h-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
+                        </svg>
+                    </div>
+                </li>
+                <li>
+                    <li class="flex  items-center justify-center">
+                        <span>Services</span>
+                        <div class="inline">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="w-6 h-6">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
+                            </svg>
+                        </div>
+                    </li>
+                </li>
+                <li>
+                    <li class="flex  items-center justify-center">
+                        <span>Cases</span>
+                        <div class="inline">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="w-6 h-6">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
+                            </svg>
+                        </div>
+                    </li>
+                </li>
+                <li>
+                    <li class="flex  items-center justify-center">
+                        <span>Blog</span>
+                        <div class="inline">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="w-6 h-6">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
+                            </svg>
+                        </div>
+                    </li>
+                </li>
+                <li>
+                    <li class="flex  items-center justify-center">
+                        <span>Contact Us</span>
+                        <div class="inline">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="w-6 h-6">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
+                            </svg>
+                        </div>
+                    </li>
+                </li>
             </ul>
             <button class="ms-auto text-2xl font-semibold text-white bg-[#B68C5A] py-4 px-7 rounded-lg">
                 Free Consultation
@@ -294,9 +342,9 @@
                             </div>
 
                         </div>
+                    </div>
                 </div>
             </div>
-        </div>
         </div>
 
     </footer>
