The Legal Practice Area Revision Complete

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <div
                     class="flex flex-col justify-center items-center space-y-8 border-r-2 border-b-2 border-gray-100 px-16 py-14">
                     <img src="images/business.png" alt="">
-                    <h3 class="head text-head font-3xl">Business Law</h3>
+                    <h3 class="head text-head text-3xl">Business Law</h3>
                     <p>
                         There are many variations of passages of Lorem Ipsum available, but the majority have suffered
                         alteration in some form, by injected humour.
@@ -145,8 +145,8 @@
                 </div>
                 <div
                     class="flex flex-col justify-center items-center space-y-8 border-r-2 border-b-2 border-gray-100 px-16 py-14 bg-gradient-to-b from-[#F3F3F3] to-[#ffff]">
-                    <img src="images/business.png" alt="">
-                    <h3 class="head text-head font-3xl">Business Law</h3>
+                    <img src="images/criminal.png" alt="">
+                    <h3 class="head text-head text-3xl">Criminal Law</h3>
                     <p>
                         There are many variations of passages of Lorem Ipsum available, but the majority have suffered
                         alteration in some form, by injected humour.
@@ -155,8 +155,8 @@
                 </div>
                 <div
                     class="flex flex-col justify-center items-center space-y-8 border-l-2 border-b-2 border-gray-100 px-16 py-14">
-                    <img src="images/business.png" alt="">
-                    <h3 class="head text-head font-3xl">Business Law</h3>
+                    <img src="images/child.png" alt="">
+                    <h3 class="head text-head text-3xl">Child Support</h3>
                     <p>
                         There are many variations of passages of Lorem Ipsum available, but the majority have suffered
                         alteration in some form, by injected humour.
@@ -166,8 +166,8 @@
 
                 <div
                     class="flex flex-col justify-center items-center space-y-8 border-r-2 border-t-2 border-gray-100 px-16 py-14">
-                    <img src="images/business.png" alt="">
-                    <h3 class="head text-head font-3xl">Business Law</h3>
+                    <img src="images/education.png" alt="">
+                    <h3 class="head text-head text-3xl">Education Law</h3>
                     <p>
                         There are many variations of passages of Lorem Ipsum available, but the majority have suffered
                         alteration in some form, by injected humour.
@@ -176,8 +176,8 @@
                 </div>
                 <div
                     class="flex flex-col justify-center items-center space-y-8 border-r-2 border-t-2 border-gray-100 px-16 py-14 ">
-                    <img src="images/business.png" alt="">
-                    <h3 class="head text-head font-3xl">Business Law</h3>
+                    <img src="images/divorce.png" alt="">
+                    <h3 class="head text-head text-3xl">Divorce Law</h3>
                     <p>
                         There are many variations of passages of Lorem Ipsum available, but the majority have suffered
                         alteration in some form, by injected humour.
@@ -186,8 +186,8 @@
                 </div>
                 <div
                     class="flex flex-col justify-center items-center space-y-8 border-l-2 border-t  -2 border-gray-100 px-16 py-14">
-                    <img src="images/business.png" alt="">
-                    <h3 class="head text-head font-3xl">Business Law</h3>
+                    <img src="images/tax.png" alt="">
+                    <h3 class="head text-head text-3xl">Tax Law</h3>
                     <p>
                         There are many variations of passages of Lorem Ipsum available, but the majority have suffered
                         alteration in some form, by injected humour.
@@ -295,7 +295,7 @@
 
             </div>
             <div class="space-y-8 flex flex-col items-center">
-                <h4 class="head text-white font-3xl">Usefull Link</h4>
+                <h4 class="head text-white text-3xl">Usefull Link</h4>
                 <ul class="text-para space-y-3">
                     <li>Home</li>
                     <li>About Us</li>
@@ -305,7 +305,7 @@
                 </ul>
             </div>
             <div class="space-y-8">
-                <h4 class="text-white head font-3xl">Contact Now</h4>
+                <h4 class="text-white head text-3xl">Contact Now</h4>
                 <div class="space-y-4">
                     <p class="text-para">
                         555 4th 5t NW, Washington
@@ -322,7 +322,7 @@
                 </div>
             </div>
             <div class="space-y-8">
-                <h4 class="head text-white font-3xl">Subscribe</h4>
+                <h4 class="head text-white text-3xl">Subscribe</h4>
                 <div class="space-y-4">
                     <p>
                         Subscribe for our latest & Articles. We Won’t Give You Spam Mails
