--- a/index.html
+++ b/index.html
@@ -55,48 +55,48 @@
                     </div>
                 </li>
                 <li>
-                    <li class="flex  items-center justify-center">
-                        <span>Services</span>
-                        <div class="inline">
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                                stroke="currentColor" class="w-6 h-6">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
-                            </svg>
-                        </div>
-                    </li>
+                <li class="flex  items-center justify-center">
+                    <span>Services</span>
+                    <div class="inline">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="w-6 h-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
+                        </svg>
+                    </div>
+                </li>
                 </li>
                 <li>
-                    <li class="flex  items-center justify-center">
-                        <span>Cases</span>
-                        <div class="inline">
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                                stroke="currentColor" class="w-6 h-6">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
-                            </svg>
-                        </div>
-                    </li>
+                <li class="flex  items-center justify-center">
+                    <span>Cases</span>
+                    <div class="inline">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="w-6 h-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
+                        </svg>
+                    </div>
+                </li>
                 </li>
                 <li>
-                    <li class="flex  items-center justify-center">
-                        <span>Blog</span>
-                        <div class="inline">
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                                stroke="currentColor" class="w-6 h-6">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
-                            </svg>
-                        </div>
-                    </li>
+                <li class="flex  items-center justify-center">
+                    <span>Blog</span>
+                    <div class="inline">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="w-6 h-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
+                        </svg>
+                    </div>
+                </li>
                 </li>
                 <li>
-                    <li class="flex  items-center justify-center">
-                        <span>Contact Us</span>
-                        <div class="inline">
-                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                                stroke="currentColor" class="w-6 h-6">
-                                <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
-                            </svg>
-                        </div>
-                    </li>
+                <li class="flex  items-center justify-center">
+                    <span>Contact Us</span>
+                    <div class="inline">
+                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                            stroke="currentColor" class="w-6 h-6">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
+                        </svg>
+                    </div>
+                </li>
                 </li>
             </ul>
             <button class="ms-auto text-2xl font-semibold text-white bg-[#B68C5A] py-4 px-7 rounded-lg">
@@ -125,7 +125,7 @@
     <main class="mt-32  px-44">
         <!-- The Legal Practice Area-section -->
         <section>
-            <div class="text-center space-y-6">
+            <div class="text-center space-y-6 px-72">
                 <h1 class="font-EB head text-4xl text-[#414040]">The Legal Practice Area</h1>
                 <p class="text-para">
                     There are many variations of passages of Lorem Ipsum available, but the majority have suffered
@@ -219,7 +219,7 @@
         <!-- Frequently Asked Any Questions section end -->
         <!-- Contact With Us section -->
         <section class="mt-28">
-            <div class="text-center mb-16 space-y-5">
+            <div class="text-center mb-16 space-y-5 px-72">
                 <h1 class="head text-head text-4xl">Contact With Us</h1>
                 <p class="text-para">
                     There are many variations of passages of Lorem Ipsum available, but the majority have suffered
@@ -233,45 +233,45 @@
                         <img class="" src="images/location.png" alt="">
                         <h4 class="head text-head text-2xl">Address</h4>
                         <p>
-                            A108 Adam Street,
+                            A108 Adam Street, <br>
                             New York, NY 535022
                         </p>
                     </div>
                     <div
                         class="space-y-4 px-14 py-16 flex flex-col items-center justify-center border-l-2 border-b-2 border-[#CFCFCF] bg-[#F3F3F3]">
-                        <img class="" src="images/location.png" alt="">
-                        <h4 class="head text-head text-2xl">Address</h4>
+                        <img class="" src="images/call.png" alt="">
+                        <h4 class="head text-head text-2xl">Call Us</h4>
                         <p>
-                            A108 Adam Street,
-                            New York, NY 535022
+                            +88 01750 00 00 00
+                            +88 01750 00 00 00
                         </p>
                     </div>
                     <div
                         class="space-y-4 px-14 py-16 flex flex-col items-center justify-center border-r-2 border-t-2 border-[#CFCFCF] bg-[#F3F3F3]">
-                        <img class="" src="images/location.png" alt="">
-                        <h4 class="head text-head text-2xl">Address</h4>
+                        <img class="" src="images/email.png" alt="">
+                        <h4 class="head text-head text-2xl">Email Us</h4>
                         <p>
-                            A108 Adam Street,
-                            New York, NY 535022
+                            info@gmail.com <br>
+                            info@gmail.com
                         </p>
                     </div>
                     <div
                         class="space-y-4 px-14 py-16 flex flex-col items-center justify-center border-l-2 border-t-2 border-[#CFCFCF] bg-[#F3F3F3]">
-                        <img class="" src="images/location.png" alt="">
-                        <h4 class="head text-head text-2xl">Address</h4>
+                        <img class="" src="images/time.png" alt="">
+                        <h4 class="head text-head text-2xl">Working Hours</h4>
                         <p>
-                            A108 Adam Street,
-                            New York, NY 535022
+                            Mon-Fri: 9AM to 5PM <br>
+                            Sunday: 9AM to 1 PM
                         </p>
                     </div>
                 </div>
                 <div class="space-y-8">
                     <form action="" class="space-y-7">
-                        <input type="text" placeholder="Search your services"
+                        <input type="text" placeholder="Your Name"
                             class="rounded-lg  ps-5 pe-72 h-14 bg-[#F3F3F3]">
-                        <input type="text" placeholder="Search your services"
+                        <input type="email" placeholder="Your Email"
                             class="rounded-lg  ps-5 pe-72 h-14 bg-[#F3F3F3]">
-                        <input type="text" placeholder="Search your services"
+                        <input type="text" placeholder="Subject"
                             class="rounded-lg  ps-5 pe-72 h-14 bg-[#F3F3F3]">
                         <textarea placeholder="Your Message" name="" id="" cols="62" rows="10"
                             class="ps-4 pt-4 bg-[#F3F3F3] h-auto"></textarea>
@@ -284,6 +284,7 @@
         </section>
         <!-- Contact With Us section end -->
     </main>
+    <!-- footer section -->
     <footer class="mt-28 bg-black  px-44">
         <div class="grid grid-cols-4 py-32 text-para gap-16 ">
             <div class="space-y-8">
@@ -348,7 +349,7 @@
         </div>
 
     </footer>
-
+    <!-- footer section end  -->
 
 
 
