--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Legal_solution</title>
     <!-- tailwind css -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- bootstrap css -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <!-- customization -->
     <script>
         tailwind.config = {
@@ -198,25 +201,59 @@
             </div>
         </section>
         <!-- The Legal Practice Area-section end-->
+
         <!-- What Our Client Say section -->
         <section class="mt-28">
-            <div class="text-center space-y-6">
+            <div class="text-center space-y-6  px-72">
                 <h1 class="head text-head text-4xl">What Our Client Say</h1>
                 <p class="text-para">
                     There are many variations of passages of Lorem Ipsum available, but the majority have suffered
                     alteration in some form, by injected humour.
                 </p>
             </div>
-            <div>
-
+            <!-- slider part of what out client say section -->
+            <div class="mt-16">
+                <div id="carouselExampleIndicators" class="carousel slide">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                            class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="images/New Project.png" class="d-block w-100 img-fluid" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="images/New Project (1).png" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="images/New Project (2).png" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
             </div>
         </section>
         <!-- What Our Client Say section end -->
+
         <!-- Frequently Asked Any Questions section -->
         <section>
 
         </section>
         <!-- Frequently Asked Any Questions section end -->
+
         <!-- Contact With Us section -->
         <section class="mt-28">
             <div class="text-center mb-16 space-y-5 px-72">
@@ -267,12 +304,9 @@
                 </div>
                 <div class="space-y-8">
                     <form action="" class="space-y-7">
-                        <input type="text" placeholder="Your Name"
-                            class="rounded-lg  ps-5 pe-72 h-14 bg-[#F3F3F3]">
-                        <input type="email" placeholder="Your Email"
-                            class="rounded-lg  ps-5 pe-72 h-14 bg-[#F3F3F3]">
-                        <input type="text" placeholder="Subject"
-                            class="rounded-lg  ps-5 pe-72 h-14 bg-[#F3F3F3]">
+                        <input type="text" placeholder="Your Name" class="rounded-lg  ps-5 pe-72 h-14 bg-[#F3F3F3]">
+                        <input type="email" placeholder="Your Email" class="rounded-lg  ps-5 pe-72 h-14 bg-[#F3F3F3]">
+                        <input type="text" placeholder="Subject" class="rounded-lg  ps-5 pe-72 h-14 bg-[#F3F3F3]">
                         <textarea placeholder="Your Message" name="" id="" cols="62" rows="10"
                             class="ps-4 pt-4 bg-[#F3F3F3] h-auto"></textarea>
                     </form>
@@ -283,6 +317,7 @@
             </div>
         </section>
         <!-- Contact With Us section end -->
+
     </main>
     <!-- footer section -->
     <footer class="mt-28 bg-black  px-44">
@@ -355,8 +390,11 @@
 
 
 
-
-
+    <!-- bootstrap js file -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
+</body>
 </body>
 
 </html>
